<resources>

    <string name="app_name">MovieRater</string>

    <!--Add Movie-->
    <string name="name_text">Name</string>
    <string name="et_movie_title">Enter the title of movie</string>
    <string name="movie_desc">Description</string>
    <string name="et_movie_desc">Enter a short description of the movie</string>


    <string name="lang_text">Langauge</string>
    <string name="rbtn1_text">English</string>
    <string name="rbtn2_text">Chinese</string>
    <string name="rbtn3_text">Malay</string>
    <string name="rbtn4_text">Tamil</string>

    <string name="Release_text">Release date</string>
    <string name="et_Release_text">Enter release date</string>

    <string name="chb_audi">Not suitable for all audience</string>
    <string name="chb_vio">Violence</string>
    <string name="chb_lang">Language used</string>

    <string name="but_add_movie">ADD MOVIE</string>


    <!--Movie_Details-->
    <string name="lblTitle">Title:</string>
    <string name="lblOverview">Overview:</string>
    <string name="lblReview">Reviews</string>
    <string name="lblLang">Langauge:</string>
    <string name="lblRate">Release date:</string>
    <string name="lblSuit">Suitable for children below 13:</string>

    <!--Movie_Details_hardcodetext_Basic-->
    <string name="txttitle">Venom</string>
    <string name="txtoverview">When Eddie Brock acquires the powers of a symbiote, he will have to release his alter-ego Venom to save his life</string>
    <string name="txtReview">No Review yet \nLong press here to add </string>
    <string name="txtLang">English</string>
    <string name="txtRelease">03-10-2018</string>
    <string name="txtSuit">Yes</string>


    <!--Movie_Details_hardcodetext_Basic-->
    <string name="maintext">You have not added a movie \nLong Press me to add a movie</string>


    <!--Rate Movie-->
    <string name="rate_text">Enter your review for the movie : </string>
    <string name="sharetext">Share your view on the show</string>

</resources>
