<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovie"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="vertical"
        android:weightSum="1">

    <TextView
        android:id="@+id/lblname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/name_text"/>

    <EditText
        android:id="@+id/txtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="20sp"
        android:hint="@string/et_movie_title" />

    <TextView
        android:id="@+id/lbldesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_desc"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/txtdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:hint="@string/et_movie_desc"/>

    <TextView
        android:id="@+id/lbllang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lang_text"
        android:textSize="18sp"/>


    <RadioGroup
        android:id="@+id/rbtngroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/rbtneng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn1_text"
            android:textSize="18sp"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rbtnchi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn2_text"
            android:textSize="18sp"
            />

        <RadioButton
            android:id="@+id/rbtnmalay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn3_text"
            android:textSize="18sp"
            />

        <RadioButton
            android:id="@+id/rbtntamil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtn4_text"
            android:textSize="18sp"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/lblrelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Release_text"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/txtdaterelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:textSize="20sp"
        android:hint="@string/et_Release_text" />

    <CheckBox
        android:id="@+id/chbaudi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chb_audi"
        android:textSize="18sp"
        />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/chklinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.3"
            android:weightSum="1"
            android:visibility="invisible"
            >

            <CheckBox
                android:id="@+id/chbvio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_vio"
                android:textSize="18dp"
                android:layout_weight="0.5"/>

            <CheckBox
                android:id="@+id/chblang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chb_lang"
                android:textSize="18dp"
                android:layout_weight="0.5"/>
        </LinearLayout>






</LinearLayout>