<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovie"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="4sp"/>
        <ImageView
            android:id="@+id/ic_black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/logo"
            android:layout_weight="0.9"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.7"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titletag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitle"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/txttitle"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/overviewtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblOverview"
        />

    <TextView
        android:id="@+id/ovtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="0.5"
        android:text="@string/txtoverview"/>


    <TextView
        android:id="@+id/lblreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/lblReview"/>
    <!-- rate start-->
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratestar"
        android:stepSize="0.5"
        android:numStars="5"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/rate_movie_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="0.5"
        android:text="@string/txtReview"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/txtMovieReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="0.5"
        android:text="@string/txtReview"/>


    <TextView
        android:id="@+id/langtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLang"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/langtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_weight="0.5"
        android:text="@string/txtLang"/>



    <TextView
        android:id="@+id/Releasedatetag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRate"
        />

    <TextView
        android:id="@+id/DateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:textSize="20sp"
        android:layout_weight="0.5"
        android:text="@string/txtRelease"/>

    <TextView
        android:id="@+id/suitabletag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSuit"
        android:textSize="18sp"
        />

    <LinearLayout
        android:id="@+id/chklinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView
            android:id="@+id/suitabletxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="0.456"
            android:text="@string/txtSuit"/>
        <TextView
            android:id="@+id/viotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="0.38"
            android:text="(Violence)"/>
        <TextView
            android:id="@+id/lantxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="0.36"
            android:text="(Language)"/>

    </LinearLayout>

</LinearLayout>


</LinearLayout>